[FM] Integración ajustes Registro Pedido - Cambios en el layout
Implementado por Julio Gonzales

--- a/src/app/layout/registro/header-registro/header-registro.component.html
+++ b/src/app/layout/registro/header-registro/header-registro.component.html
@@ -1,13 +1,23 @@
 <header>
   <div class="barra_identificador"></div>
   <section class="header background_blanco">
-    <div class="row">
-      <div class="col-6">
-        <a href="/">
-          <img src="https://catalogo.claro.com.pe/img/logo-tienda-prepago.png" alt="Tienda Claro Online" width="50%" />
-        </a>
-      </div>
-      <div class="col-6 text-right"><i class="fas fa-lock opcion_verde"></i> Formulario seguro</div>
+    <div class="logo">
+      <a href="/">
+        <img src="https://catalogo.claro.com.pe/img/logo-tienda-prepago.png" alt="Tienda Claro Online" />
+      </a>
     </div>
+
+    <div class="opciones_header">
+      <div class="opcion_verde"><i class="fas fa-lock"></i> Formulario seguro</div>
+    </div>
+  </section>
+
+  <section class="breadcrum">
+    <a href="javascript:history.back(1)">
+      <i class="fa fa-angle-double-left"> </i>
+      <span>
+        Regresar
+      </span>
+    </a>
   </section>
 </header>
