--- a/src/app/layout/registro/header-registro/header-registro.component.scss
+++ b/src/app/layout/registro/header-registro/header-registro.component.scss
@@ -29,6 +29,11 @@
   align-items: center;
 }
 
+.header .opciones_header .opcion_verde i {
+  color: #70c473;
+  font-size: 14px;
+}
+
 .header i.opcion_verde {
   color: #70c473;
   font-size: 14px;
@@ -42,4 +47,24 @@
   background: #ee122c;
   width: 100%;
   height: 5px;
+}
+
+.breadcrum i {
+  font-size: 16px;
+}
+
+.breadcrum span {
+  margin-left: 5px;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.breadcrum {
+  margin: 20px auto 10px;
+
+  @media only screen and (min-width: 640px) {
+    width: 85%;
+    display: flex;
+    margin: 20px auto 10px;
+  }
 }
