--- a/src/app/pages/registro/registro-detalle/registro-detalle.component.scss
+++ b/src/app/pages/registro/registro-detalle/registro-detalle.component.scss
@@ -36,12 +36,17 @@ input.radio_custom {
   padding-left: 10px;
   background-color: initial;
   cursor: default;
-  -webkit-appearance: radio;
+  /* -webkit-appearance: radio; */
+  /* -webkit-appearance: none; */
   box-sizing: border-box;
   margin: 3px 3px 0px 5px;
   padding: initial;
   border: initial;
   display: none;
+}
+
+input.text_custom {
+  height: 50px;
 }
 
 .menu_categorias {
@@ -124,12 +129,186 @@ button.btn_naranja {
 }
 
 .form_registro {
-  width: 100%;
+  width: 80%;
   display: flex;
-  margin: 40px 0px 50px 0px;
+  /* margin: 40px 0px 50px 0px; */
   justify-content: center;
   border-radius: 11px;
   margin: 0px auto;
   background: #f4f4f4;
   padding-bottom: 30px;
+}
+
+.form-check-uno {
+  width: 60%;
+  margin: auto;
+  padding-top: 27px;
+}
+
+.titular h1 {
+  font-size: 22px;
+  font-weight: 300;
+  text-align: center;
+  margin-bottom: 40px;
+
+  @media only screen and (min-width: 640px) {
+    width: 30%;
+    margin: 40px auto;
+    /* margin-bottom: 30px; */
+  }
+}
+
+.aviso {
+  color: #f5821f;
+  font-weight: 400;
+}
+
+h2 {
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.formulario form i {
+  font-size: 20px;
+  margin-right: 8px;
+}
+
+::placeholder {
+  opacity: 0.5;
+  font-size: 13px;
+}
+
+::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
+  opacity: 0.5;
+  font-size: 13px;
+}
+::-moz-placeholder {
+  /* Firefox 19+ */
+  opacity: 0.5;
+  font-size: 13px;
+}
+:-ms-input-placeholder {
+  /* IE 10+ */
+  opacity: 0.5;
+  font-size: 13px;
+}
+:-moz-placeholder {
+  /* Firefox 18- */
+  opacity: 0.5;
+  font-size: 13px;
+}
+
+/* The container */
+.container_check {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  /* margin-bottom: 12px; */
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+  background-color: #ffffff;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  margin: 5px 0px 5px 0px;
+  padding: 15px 10px 10px 50px;
+  font-size: 13px;
+}
+
+/* Hide the browser's default checkbox */
+.container_check input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+
+  margin: 20px 0px 5px 15px;
+  border: 1px solid #ccc;
+}
+
+/* On mouse-over, add a grey background color */
+.container_check:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.container_check input:checked ~ .checkmark {
+  /* background-color: #2196F3; */
+  background-color: #70c473;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: '';
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.container_check input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.container_check .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+select.select_minimal {
+  /*
+  background-image:
+    linear-gradient(45deg, transparent 50%, gray 50%),
+    linear-gradient(135deg, gray 50%, transparent 50%),
+    linear-gradient(to right, #ccc, #ccc);
+    */
+  background-image: linear-gradient(45deg, transparent 50%, red 50%), linear-gradient(135deg, red 50%, transparent 50%),
+    linear-gradient(to right, red, red);
+  background-position: calc(100% - 20px) calc(1em + 2px), calc(100% - 15px) calc(1em + 2px), calc(100% - 2.5em) 0.5em;
+  background-size: 5px 5px, 5px 5px, 1px 1.5em;
+  background-repeat: no-repeat;
+}
+
+select.select_minimal:focus {
+  /*
+  background-image:
+    linear-gradient(45deg, green 50%, transparent 50%),
+    linear-gradient(135deg, transparent 50%, green 50%),
+    linear-gradient(to right, #ccc, #ccc);
+    */
+  background-image: linear-gradient(45deg, red 50%, transparent 50%), linear-gradient(135deg, transparent 50%, red 50%),
+    linear-gradient(to right, red, red);
+  background-position: calc(100% - 15px) 1em, calc(100% - 20px) 1em, calc(100% - 2.5em) 0.5em;
+  background-size: 5px 5px, 5px 5px, 1px 1.5em;
+  background-repeat: no-repeat;
+  border-color: green;
+  outline: 0;
+}
+
+select:-moz-focusring {
+  color: transparent;
+  text-shadow: 0 0 0 #000;
 }
