--- a/src/app/pages/registro/registro-nombre/registro-nombre.component.scss
+++ b/src/app/pages/registro/registro-nombre/registro-nombre.component.scss
@@ -1,3 +1,18 @@
+.form_registro {
+  width: 30%;
+  /* display: flex; */
+  margin: 40px 0px 50px 0px;
+  justify-content: center;
+  border-radius: 11px;
+  margin: 0px auto;
+  /* background: #f4f4f4; */
+  padding-bottom: 30px;
+
+  @media only screen and (max-width: 1280px) {
+    width: 85%;
+  }
+}
+
 button.btn_naranja {
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
   background: #f5821f;
@@ -9,4 +24,47 @@ button.btn_naranja {
   font-size: 18px;
   font-weight: 500;
   color: #ffffff;
+}
+
+.titular {
+  width: 80%;
+  margin: 40px auto;
+  margin-bottom: 30px;
+}
+
+.titular h1 {
+  font-size: 22px;
+  font-weight: 300;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+@media only screen and (min-width: 640px) {
+  .titular {
+    width: 30%;
+    margin: 40px auto;
+    margin-bottom: 30px;
+  }
+}
+
+@media only screen and (min-width: 640px) {
+  .form-check-cero {
+    width: 60%;
+    margin: auto;
+  }
+}
+
+.input_custom {
+  border: 1px solid #cccccc;
+  border-radius: 5px;
+  font-size: 16px;
+  color: #222222;
+  height: 46px;
+  width: 100%;
+  text-transform: uppercase;
+  padding-left: 10px;
+}
+
+::placeholder {
+  opacity: 0.5;
 }
