--- a/src/app/pages/hogar/hogar.component.html
+++ b/src/app/pages/hogar/hogar.component.html
@@ -7,13 +7,14 @@
     <section class="category-title">
       <h1>Todos</h1>
       <h6>En Tienda Claro encuentras el producto que se ajuste a ti, elige el tuyo y ¡Cómpralo Ahora!</h6>
+      <button name="btn" (click)="emitir()">Cambiar</button>
     </section>
     <!-- End Header Catalog -->
 
     <!-- Product List -->
     <div class="container-fluid">
       <div class="devices">
-        <a href="javascript:void()">
+        <a routerLink="/hogar-detalle">
           <div class="card">
             <div class="card-header">
               <span class="bold-negro-1">IFI 20Mbps</span>
@@ -68,7 +69,7 @@
       </div>
 
       <div class="devices">
-        <a href="javascript:void()">
+        <a routerLink="/hogar-detalle">
           <div class="card">
             <div class="card-header">
               <span class="bold-negro-1">IFI 20Mbps</span>
@@ -123,7 +124,7 @@
       </div>
 
       <div class="devices">
-        <a href="javascript:void()">
+        <a routerLink="/hogar-detalle">
           <div class="card">
             <div class="card-header">
               <span class="bold-negro-1">IFI 20Mbps</span>
@@ -208,7 +209,7 @@
       </div>
 
       <div class="devices">
-        <a href="javascript:void()">
+        <a routerLink="/hogar-detalle">
           <div class="card">
             <div class="card-header">
               <span class="bold-negro-1">IFI 20Mbps</span>
@@ -263,7 +264,7 @@
       </div>
 
       <div class="devices">
-        <a href="javascript:void()">
+        <a routerLink="/hogar-detalle">
           <div class="card">
             <div class="card-header">
               <span class="bold-negro-1">IFI 20Mbps</span>
