[FM] Ajustes en el routing y layout
Cambios:
* Se cambian las rutas para los diferentes layouts.
* Se agregan rutas para los links del header.

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -39,7 +39,7 @@
       <ul>
         <ng-container *ngFor="let item of menuList">
           <li>
-            <a routerLink="{{ item.itemUrl }}">{{ item.itemLabel }}</a>
+            <a (click)="redirectTo(item.itemUrl)">{{ item.itemLabel }}</a>
           </li>
         </ng-container>
       </ul>
