--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -1,9 +1,11 @@
-<!-- NavBar -->
-<app-header></app-header>
-<!-- End NavBar -->
-<div id="content-wrap">
-  <router-outlet></router-outlet>
+<div id="page-container">
+  <!-- NavBar -->
+  <app-header></app-header>
+  <!-- End NavBar -->
+  <div id="content-wrap">
+    <router-outlet></router-outlet>
+  </div>
+  <!-- Footer-->
+  <app-footer></app-footer>
+  <!-- End Footer -->
 </div>
-<!-- Footer-->
-<app-footer></app-footer>
-<!-- End Footer -->
