--- a/src/app/pages/home/carousel/carousel.component.html
+++ b/src/app/pages/home/carousel/carousel.component.html
@@ -1,15 +1,15 @@
 <owl-carousel-o [options]="customOptions" class="carousel">
-  <ng-container *ngFor="let slide of slidesStore">
-    <ng-template carouselSlide [id]="slide.id">
-      <img [src]="slide.src" [alt]="slide.alt" [title]="slide.titulo" />
+  <ng-container *ngFor="let slide of bannerPostpaid">
+    <ng-template carouselSlide>
+      <img [src]="slide.desktopImg" [alt]="slide.altImg" [title]="slide.title" />
     </ng-template>
   </ng-container>
 </owl-carousel-o>
 
 <owl-carousel-o [options]="customOptions" class="carousel-small">
-  <ng-container *ngFor="let slide of slidesStore">
+  <ng-container *ngFor="let slide of bannerPostpaid">
     <ng-template carouselSlide>
-      <img [src]="slide.src2" [alt]="slide.alt" [title]="slide.titulo" />
+      <img [src]="slide.mobileImg" [alt]="slide.altImg" [title]="slide.title" />
     </ng-template>
   </ng-container>
 </owl-carousel-o>
