[FM] Hash en Routing - Ajustes en Sidbar/Hogar
Cambios:
* Se agrega hash en la configuración del routing para manejo en Portal.
* Actualización de cambios realizados en Sidebar/Hogar por Fernando Bustamante.

--- a/src/app/pages/hogar/hogar.component.html
+++ b/src/app/pages/hogar/hogar.component.html
@@ -7,7 +7,7 @@
     <section class="category-title">
       <h1>Todos</h1>
       <h6>En Tienda Claro encuentras el producto que se ajuste a ti, elige el tuyo y ¡Cómpralo Ahora!</h6>
-      <button name="btn" (click)="emitir()">Cambiar</button>
+      <!-- <button name="btn" (click)="emitir()">Cambiar</button> -->
     </section>
     <!-- End Header Catalog -->
 
